@@ -56,6 +56,9 @@ Changes in version 0.1.2.5-xxxx - 200?-??-??
     - Routers no longer ever list themselves in their "family" line,
       even if configured to do so.  This makes it easier to configure
       family lists efficiently.
+    - Remove an artificial (but quite high) restriction on expected
+      bandwidth, so that accounting won't break once we all have gigabit
+      connections to our homes.
 
   o Controller features:
     - Have GETINFO dir/status/* work on hosts with DirPort disabled.
